2019-1/230/users/4086/executions/1641_1800.log
== TEST (2019-04-17 13:33:39) 
-- CODE:
a=float(input("valor de a: "))
b=float(input("valor de b: "))
c=float(input("valor de c: "))

d= a**2
f= b**2
g= s**2
print(d)
print(f)
print(g)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    g= s**2
NameError: name 's' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-17 13:34:16) 
-- CODE:
a=float(input("valor de a: "))
b=float(input("valor de b: "))
c=float(input("valor de c: "))

d= a**2
f= b**2
g= c**2
print(d)
print(f)
print(g)
-- OUTPUT:
400.0
625.0
900.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-17 13:36:10) 
-- CODE:
a=float(input("valor de a: "))
b=float(input("valor de b: "))
c=float(input("valor de c: "))

d= a**2
f= b**2
g= c**2

q=(d + f + g) / (a + b + c)

print(q)
-- OUTPUT:
25.666666666666668
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-17 13:36:34) 
-- CODE:
a=float(input("valor de a: "))
b=float(input("valor de b: "))
c=float(input("valor de c: "))

d= a**2
f= b**2
g= c**2

q=(d + f + g) / (a + b + c)

print(round(q, 7))
-- OUTPUT:
25.6666667
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-17 13:36:42) 
-- CODE:
a=float(input("valor de a: "))
b=float(input("valor de b: "))
c=float(input("valor de c: "))

d= a**2
f= b**2
g= c**2

q=(d + f + g) / (a + b + c)

print(round(q, 7))
-- EXECUTION TIME:
0.180266
-- TEST CASE 1:
---- input:
20
25
30
---- correct output:
25.6666667
---- user output:
25.6666667
-- TEST CASE 2:
---- input:
235
400
350
---- correct output:
342.8680203
---- user output:
342.8680203
-- TEST CASE 3:
---- input:
90
120
2
---- correct output:
106.1509434
---- user output:
106.1509434
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
